Fix 1st paragraph to be aligned with the picture

--- a/styles/main.css
+++ b/styles/main.css
@@ -313,6 +313,7 @@ ul ul {
 	.col-12 {width: 100%;}
 	.subtitle {font-size: 60px;}
 	.profile-pic {max-height: 480px; width: auto;}
+	.p-1	{margin-top: 0px;}
 	.change-order {display: flex;}
 	.change-order a {order: 2;}
 	.change-order .project-info {order: 1;}
@@ -334,6 +335,7 @@ ul ul {
   .col-12 {width: 100%;}
 	.subtitle {font-size: 60px;}
 	.profile-pic {max-height: 480px; width: auto;}
+	.p-1	{margin-top: 0px;}
 	.change-order {display: flex;}
 	.change-order a {order: 2;}
 	.change-order .project-info {order: 1;}
